--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-API_KEY="b607c26879eb6f0ebc778554fbbb7109"
+API_KEY=""
